# siisty

./: .gitignore  CMakeLists.txt  LICENSE  PocoMacros.cmake  README.md  TIT.md  gen-page  resources.qrc  styles.qss
Client/: CMakeLists.txt  WorkModel.scxml  form.ui
Client/RoleSetup/Admin/: CMakeLists.txt  CMakeLists.txt.save
Client/RoleSetup/Admin/Ui/: Accidents.ui  AdminMain.ui  AdminMain.ui.autosave  ObjectTypeAdministration.ui  RegisterAccidentDialog.ui  RegisterAccidentDialog.ui.save  RoleManagment.ui  RoleManagment.ui.save  UsersList.ui.save  accidentlist.ui
Client/RoleSetup/Admin/src/: AccidentList.cpp  Accidents.cpp.save  AdminMain.cpp  ObjectTypeAdministration.cpp.save  RegisterAccidentDialog.cpp  RoleManagment.cpp.save  UsersList.cpp.save
Client/RoleSetup/Customer/: CMakeLists.txt  CMakeLists.txt.save
Client/RoleSetup/Customer/Ui/: Contracts.ui  Contracts.ui.save  CustomerMain.ui.save
Client/RoleSetup/Customer/src/: Contracts.cpp  Contracts.cpp.save  CustomerMain.cpp
Client/RoleSetup/General/: CMakeLists.txt  CMakeLists.txt.save
Client/RoleSetup/General/Ui/: DebugConsole.ui  DutySchedule.ui  DutySchedule.ui.autosave  PersonalAccounting.ui  PersonalAccounting.ui.save  Profile.ui  Profile.ui.autosave
Client/RoleSetup/General/src/: DebugConsole.cpp.save  DutySchedule.cpp  PersonalAccounting.cpp.save  Profile.cpp  Profile.cpp.save
Client/Service/: CMakeLists.txt.save
Client/Service/src/: Service.cpp  Service.cpp.save
Client/Ui/: Controller.ui  Controller.ui.save  Login.ui  MainPage.ui  Register.ui
Client/include/: Controller.hpp  Controller.hpp.save  GUI.hpp  MainPage.hpp  Manager.hpp  PagerPresets.hpp  Register.hpp.save  Service.hpp  gui.hpp  manager.hpp
Client/include/Pages/: Login.hpp
Client/src/: Controller.cpp  GUI.cpp  Login.cpp  MainPage.cpp  Manager.cpp  Register.cpp  Service.cpp  exampleQtSslClient.cpp  gui.cpp  main.cpp  main.cpp.save  manager.cpp
Client/src/Ui/: Controller.ui  GUI.ui
Client/src/Ui/Pages/: Login.ui
Crypto/: CMakeLists.txt
Database/: CMakeLists.txt
Database/include/Database/: Database.hpp  ObjectType.hpp  tables.hpp
Database/src/: CmdError.cpp  Database.cpp
General/: CMakeLists.txt
General/include/Crypto/: Hash.hpp
General/include/Database/: CmdError.hpp  Database.hpp  ObjectType.hpp  Role.hpp  Types.hpp  Utility.hpp  command.hpp
General/include/Database/Queries/: CreateTables.hpp
General/include/General/: SslClientBase.hpp  SslSocket.hpp  SslSocketManager.hpp  Vectors.hpp  iiNPack.hpp  logger.hpp
General/include/Widgets/: FloatNotifier.hpp  NotifyItem.hpp  NotifyItemFactory.hpp  NotifyMsgItem.hpp  NotifyMsgItemFactory.hpp  NotifyProgressFactory.hpp  NotifyProgressItem.hpp  NotifyProgressItemFactory.hpp  Progresses.hpp
General/include/iiNetworkPacket/: iiNetworkPacket.hpp
General/src/: ClickableLabel.cpp  Database.cpp  FloatNotifier.cpp  Hash.cpp  PagesManager.cpp  Progresses.cpp  QLedIndicator.cpp  SslClientBase.cpp  SslSocket.cpp  SslSocketManager.cpp  command.cpp  iiNPack.cpp  logger.cpp
General/src/Crypto/: Hash.cpp
General/src/Database/: Database.cpp  command.cpp
General/src/General/: SslClientBase.cpp  iiNPack.cpp
General/src/Widgets/: FloatNotifier.cpp  NotifyItem.cpp  NotifyItemFactory.cpp  NotifyMsgItem.cpp  NotifyMsgItemFactory.cpp  NotifyProgressItem.cpp  NotifyProgressItemFactory.cpp
PagesManager/: CMakeLists.txt
PagesManager/include/PagesManager/: PagesManager.hpp
PagesManager/src/: PagesManager.cpp
Server/: CMakeLists.txt  CMakeLists.txt.save
Server/Controller/: CMakeLists.txt
Server/Controller/QLedIndicator/: CMakeLists.txt
Server/Controller/include/: Controller.hpp
Server/Controller/src/: Controller.cpp  PagesManager.cpp
Server/Controller/src/Pages/: ConnectionsPage.cpp  RegisterUser.cpp  Users.cpp  UsersList.cpp
Server/Controller/src/Ui/: ControlPannel.ui  Controller.ui  Users.ui
Server/Database/: CMakeLists.txt  Database.hpp
Server/Database/include/Database/: Database.hpp  Role.hpp  Utility.hpp  query.hpp  tables.hpp  tables_map.hpp
Server/Database/src/: Database.cpp
Server/GUI/: CMakeLists.txt
Server/GUI/QLedIndicator/src/: QLedIndicator.cpp
Server/GUI/include/: GUI.hpp  PagesManager.hpp
Server/GUI/include/Pages/: ConnectionsPage.hpp  DataUsagePage.hpp  DatabasePage.hpp  ServerInfoPage.hpp  SystemLoadPage.hpp  WelcomePage.hpp
Server/GUI/src/: GUI.cpp  PagesManager.cpp
Server/GUI/src/Pages/: ConnectionsPage.cpp  DataUsagePage.cpp  DatabasePage.cpp  RegisterUser.cpp  ServerInfoPage.cpp  SystemLoadPage.cpp  UsersList.cpp
Server/GUI/src/Ui/: ConnectionsPage.ui  ControlPannel.ui  DataUsagePage.ui  DatabasePage.ui  GUI.backup.ui  GUI.ui  ServerInfoPage.ui  SystemLoadPage.ui  WelcomePage.ui
Server/SslServer/: CMakeLists.txt
Server/SslServer/include/SslServer/: AuthorityManager.hpp  Role.hpp  SslServer.hpp  SslServerManager.hpp  iiClient.hpp  iiServer.hpp
Server/SslServer/src/: SslServer.cpp  SslServerManager.cpp  SslSocket.cpp  SslSocketManager.cpp  iiClient.cpp  iiServer.cpp  logger.cpp
Server/Ui/: ControlPannel.ui.save  Controller.ui  Users.ui.save
Server/Ui/ControlPannel/: ConnectionsPage.ui.save  ServerInfoPage.ui.save
Server/Ui/Users/: RegisterUser.ui.save  UsersList.ui
Server/include/: Controller.hpp.save
Server/include/Pages/: ControlPannel.hpp.save  WelcomePage.hpp.save
Server/include/Pages/ControlPannel/: ServerInfoPage.hpp.save
Server/include/Pages/Users/: RegisterUser.hpp  UsersList.hpp  UsersList.hpp.save
Server/src/: Controller.cpp  main.cpp
Server/src/Pages/: RegisterUser.cpp  UsersList.cpp  UsersList.cpp.save  WelcomePage.cpp.save
UserInterface/Client/: CMakeLists.txt
UserInterface/Client/include/: Controller.hpp
UserInterface/Client/src/: Controller.cpp  Login.cpp  Service.cpp
UserInterface/Server/: CMakeLists.txt
UserInterface/Server/Ui/Users/: RegisterUser.ui
UserInterface/Server/include/: Controller.hpp
UserInterface/Server/include/Pages/: Users.hpp
UserInterface/Server/src/: Controller.cpp
UserInterface/Server/src/Pages/: ControlPannel.cpp  RegisterUser.cpp  ServerInfoPage.cpp
(+318 files in other folders)
